--- a/RaylibPlatformer.vcxproj.filters
+++ b/RaylibPlatformer.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="src\solid_collision_check.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="src\world.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\game.h">
@@ -114,6 +117,12 @@
       <Filter>Headerdateien</Filter>
     </ClInclude>
     <ClInclude Include="src\memory\pointer_array.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="src\memory\pool_allocator.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="src\world.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
   </ItemGroup>
